@@ -1,6 +1,7 @@
 Development
 -----------
 - pmount: close an already opened LUKS device if mount failed
+- pmount: print a proper error message if mapped device already exists
 
 0.9.2
 -----
